# raglocalchatbot

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
.playwright-cli/: page-2026-03-10T18-04-36-502Z.yml  page-2026-03-10T18-12-22-987Z.yml
apps/admin/: Dockerfile  index.html  package.json  vite.config.ts
apps/admin/src/: App.tsx  main.tsx  styles.css
apps/admin/src/components/: DocumentTable.tsx  LoginForm.tsx  UploadForm.tsx
apps/admin/src/lib/: api.ts
apps/site/: Dockerfile  index.html  styles.css
apps/widget/: Dockerfile  index.html  package.json  vite.config.ts
apps/widget/src/: embed.tsx  preview.tsx  widget.css  widgetStyles.ts
apps/widget/src/components/: WidgetApp.tsx
infra/nginx/: widget.conf
services/api/: Dockerfile  alembic.ini  pyproject.toml
services/api/alembic/versions/: 0001_init.py
services/api/app/: main.py
services/api/app/api/: dependencies.py
services/api/app/api/routes/: admin_auth.py  chat.py  documents.py  health.py
services/api/app/core/: config.py  security.py
services/api/app/db/: session.py
services/api/app/models/: __init__.py  entities.py
services/api/app/schemas/: __init__.py  api.py
services/api/app/services/: admin.py  chat.py  ingestion.py  ollama.py  rate_limit.py  retrieval.py  storage.py
services/api/app/workers/: queue.py  run_worker.py  tasks.py
services/api/tests/: test_admin_service.py  test_chat_service.py  test_ingestion.py  test_ollama_service.py  test_security.py
tmp/: ollama-chat-test.json  upload-smoke.txt
